@@ -1,9 +1,9 @@
 # $Id: Makefile.am,v 1.6 2001/09/22 16:25:29 mej Exp $
 
-EXTRA_HEADERS = array.h avl_tree.h dlinked_list.h iterator_if.h		\
-linked_list.h list_if.h map_if.h mbuff.h module.h obj.h objpair.h	\
-regexp.h socket.h str.h sysdefs.h tok.h types.h url.h ustr.h		\
-vector_if.h
+EXTRA_HEADERS = array.h avl_tree.h condition_if.h dlinked_list.h	\
+iterator_if.h linked_list.h list_if.h map_if.h mbuff.h module.h		\
+mutex_if.h obj.h objpair.h pthreads.h regexp.h socket.h str.h		\
+sysdefs.h thread_if.h tok.h types.h url.h ustr.h vector_if.h
 
 install-exec-hook:
 	$(mkinstalldirs) $(DESTDIR)$(includedir)/$(PACKAGE)
